--- a/style/style.css
+++ b/style/style.css
@@ -114,20 +114,23 @@ header h2 {
   background-color: var(--primary-color);
 }
 
+.btn-random.active .btn-repeat.active {
+  color: var(--primary-color);
+}
+
 .volume-bar {
-  cursor: pointer;
   padding: 4px;
   margin-bottom: 6px;
   display: flex;
   align-items: center;
-  gap: 4px;
 }
 
 .btn-volume {
-  height: 26px;
-  width: 26px;
   display: flex;
   align-items: center;
+  padding: 8px 4px 8px 8px;
+  margin-right: 4px;
+  cursor: pointer;
 }
 
 .volume-off {
@@ -143,12 +146,13 @@ header h2 {
 }
 
 .btn-volume i {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 #volume {
   width: 120px;
   height: 6px;
+  cursor: pointer;
 }
 
 /* .control .btn {
@@ -179,9 +183,10 @@ header h2 {
   height: 6px;
   background: #d3d3d3;
   outline: none;
-  opacity: 0.7;
+  opacity: 1;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
+  cursor: pointer;
 }
 
 .progress::-webkit-slider-thumb {
@@ -190,10 +195,47 @@ header h2 {
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
   background-color: var(--primary-color);
+}
+
+.progress::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary-color);
+}
+
+/* .volume {
+  width: 100%;
+  -webkit-appearance: none;
+  height: 6px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 1;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
   cursor: pointer;
 }
+
+.volume::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary-color);
+}
+
+.volume::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary-color);
+} */
 
 .progress-container {
   display: flex;
@@ -228,8 +270,8 @@ header h2 {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #000;
-  z-index: -1;
+  background-color: var(--primary-color);
+  cursor: pointer;
 }
 
 /* PLAYLIST */
