--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
   padding: 0;
   margin: 0;
   box-sizing: inherit;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -294,6 +295,11 @@ header h2 {
   padding: 8px 16px;
   border-radius: 5px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.song .author,
+.song .title {
+  user-select: none;
 }
 
 .song.active {
